# ComfyUI_FL-MCP

./: .env.example  .gitignore  .variables.json  CONTRIBUTING.md  README.md  __init__.py  mcp_daemon.py  pyproject.toml  requirements.txt
agents/: agent.md
backend/: __init__.py  agent.py  auth_service.py  claude_code_runner.py  coding_tools.py  comfy_manager.py  comfy_models.py  comfy_supervisor.py  comfy_tools.py  config.py  manager.py  mcp_server.py  models.py  server.py  server_runner.py  sysinfo.py  terminal_launcher.py  websocket.py
notes/comfy_init/: investigation.md  research.md
notes/comfy_research/: custom_nodes.md  implementation.md
notes/extended_tools/: alternative_approach.md  implementation.md  investigation.md
notes/extended_tools/next/: analysis.md
notes/features/: settings.md
notes/frontend_next/: seed.md
notes/get_selected_nodes_feature/: research_findings.md
notes/implementation/: progress.md
notes/mcp_refine/: completion.md
notes/message_processing/: analysis.md  final_analysis.md  findings.md  investigation.md
notes/message_processing/take2/: analysis.md  logging_added.md
notes/pwa/: progress.md
notes/sysprompt/: draft.md  mode_switching.md  ren.md
tests/: test_comfy_manager_v4.py
web/js/: chat_ui.js  extension.js  fl_api.js  session_manager.js  style.css  tool_activity.js  tool_executor.js  ws_client.js
web/js/_components/: MessageBubble.js
web/pwa/: README.md  app.js  service-worker.js  styles.css
web/pwa/icons/: .gitkeep
